[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "brain_ms_autoencoder"
version = "0.0.1"
description = "Anomaly detection autoencoders tailored for detecting early indicators of multiple sclerosis in medical imaging data, leveraging deep learning for accurate and efficient diagnosis support."
authors = [
  { name = "Gianpiero Tulipani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["brain_ms_autoencoder"]
force_sort_within_sections = true
